--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
@@ -205,12 +205,14 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/DoSomethingResponse'
+          uniqueItems: true
         multiTemplateClassImpl:
           $ref: '#/components/schemas/MultiTemplateClassImpl'
         many:
           type: array
           items:
             $ref: '#/components/schemas/MultiTemplateClassImpl'
+          uniqueItems: true
 
     # com.anaptecs.jeaf.junit.openapi.base.BankAccount
     BankAccount:
@@ -356,6 +358,7 @@ components:
               - integer
             format: int64
           deprecated: true
+          uniqueItems: true
         discountOffers:
           type: array
           items:
@@ -508,12 +511,14 @@ components:
                 format: int32
               minItems: 10
               maxItems: 100
+              uniqueItems: true
             requiredArray:
               type: array
               items:
                 type: 
                   - string
               minItems: 1
+              uniqueItems: true
             bigIntegerCode:
               type: integer
               format: int64
@@ -527,6 +532,7 @@ components:
                 type: integer
                 format: int32
                 minimum: 1234
+              uniqueItems: true
               nullable: true
 
     # com.anaptecs.jeaf.junit.openapi.base.ChildB
@@ -551,12 +557,14 @@ components:
                   - "null"
               minItems: 11
               maxItems: 42
+              uniqueItems: true
             composition:
               description: >-
                 the composition
               type: array
               items:
                 $ref: '#/components/schemas/ParentClass'
+              uniqueItems: true
 
     # com.anaptecs.jeaf.junit.openapi.base.ChildBB
     ChildBB:
@@ -587,6 +595,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/ChildB'
+              uniqueItems: true
             deprecatedParent:
               # Property "deprecatedParent" is marked as deprecated. However OpenAPI does not support to mark references to complex types as deprecated.
               $ref: '#/components/schemas/ParentClass'
@@ -612,10 +621,12 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/BooleanCodeType'
+          uniqueItems: true
         shortCodeTypeAssociation:
           type: array
           items:
             $ref: '#/components/schemas/ShortCodeType'
+          uniqueItems: true
           minItems: 1
         stringCode:
           $ref: '#/components/schemas/StringCodeType'
@@ -750,6 +761,7 @@ components:
               - string
               - "null"
           deprecated: true
+          uniqueItems: true
 
     # com.anaptecs.jeaf.junit.generics.DoSomethingResponse
     DoSomethingResponse:
@@ -1105,6 +1117,7 @@ components:
                   - string
                   - "null"
               deprecated: true
+              uniqueItems: true
             stops:
               description: >-
                 
@@ -1114,6 +1127,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/UICStop'
+              uniqueItems: true
               minItems: 2
               maxItems: 42
             bookingCodes:
@@ -1123,6 +1137,7 @@ components:
                 minLength: 3
                 maxLength: 5
               minItems: 1
+              uniqueItems: true
               nullable: false
 
     # com.anaptecs.jeaf.junit.openapi.base.ParentClass
@@ -1146,6 +1161,7 @@ components:
           items:
             type: string
             pattern: '^DE\d{2}\s?([0-9a-zA-Z]{4}\s?){4}[0-9a-zA-Z]{2}$'
+          uniqueItems: true
           nullable: true
         theBankAccount:
           # I would like to document references to other types.
@@ -1261,18 +1277,21 @@ components:
             type: 
               - boolean
               - "null"
+          uniqueItems: true
         bBooleanArray:
           type: array
           items:
             type: 
               - boolean
               - "null"
+          uniqueItems: true
         cBooleanArray:
           type: array
           items:
             type: 
               - boolean
               - "null"
+          uniqueItems: true
         aByteArray:
           type: string
           format: byte
@@ -1288,6 +1307,7 @@ components:
               - integer
               - "null"
             format: int32
+          uniqueItems: true
         bShortArray:
           type: array
           items:
@@ -1295,6 +1315,7 @@ components:
               - integer
               - "null"
             format: int32
+          uniqueItems: true
         aIntegerArray:
           type: array
           items:
@@ -1302,6 +1323,7 @@ components:
               - integer
               - "null"
             format: int32
+          uniqueItems: true
         bIntegerArray:
           type: array
           items:
@@ -1309,6 +1331,7 @@ components:
               - integer
               - "null"
             format: int32
+          uniqueItems: true
         cIntegerArray:
           type: array
           items:
@@ -1316,6 +1339,7 @@ components:
               - integer
               - "null"
             format: int32
+          uniqueItems: true
         aLongArray:
           type: array
           items:
@@ -1323,6 +1347,7 @@ components:
               - integer
               - "null"
             format: int64
+          uniqueItems: true
         bLongArray:
           type: array
           items:
@@ -1330,6 +1355,7 @@ components:
               - integer
               - "null"
             format: int64
+          uniqueItems: true
         aBigIntegerArray:
           type: array
           items:
@@ -1337,18 +1363,21 @@ components:
               - integer
               - "null"
             format: int64
+          uniqueItems: true
         aCharacterArray:
           type: array
           items:
             type: 
               - string
               - "null"
+          uniqueItems: true
         bCharacterArray:
           type: array
           items:
             type: 
               - string
               - "null"
+          uniqueItems: true
         aFloatArray:
           type: array
           items:
@@ -1356,6 +1385,7 @@ components:
               - number
               - "null"
             format: float
+          uniqueItems: true
         bFloatArray:
           type: array
           items:
@@ -1363,6 +1393,7 @@ components:
               - number
               - "null"
             format: float
+          uniqueItems: true
         aDoubleArray:
           type: array
           items:
@@ -1370,6 +1401,7 @@ components:
               - number
               - "null"
             format: double
+          uniqueItems: true
         bDoubleArray:
           type: array
           items:
@@ -1377,6 +1409,7 @@ components:
               - number
               - "null"
             format: double
+          uniqueItems: true
         aBigDecimalArray:
           type: array
           items:
@@ -1384,24 +1417,28 @@ components:
               - number
               - "null"
             format: double
+          uniqueItems: true
         aStringArray:
           type: array
           items:
             type: 
               - string
               - "null"
+          uniqueItems: true
         bStringArray:
           type: array
           items:
             type: 
               - string
               - "null"
+          uniqueItems: true
         cStringArray:
           type: array
           items:
             type: 
               - string
           minItems: 1
+          uniqueItems: true
 
     # com.anaptecs.jeaf.junit.openapi.base.PrimitiveArraysObjectWithRestrictions
     PrimitiveArraysObjectWithRestrictions:
@@ -1416,18 +1453,21 @@ components:
             type: 
               - boolean
               - "null"
+          uniqueItems: true
         bBooleanArray:
           type: array
           items:
             type: 
               - boolean
               - "null"
+          uniqueItems: true
         cBooleanArray:
           type: array
           items:
             type: 
               - boolean
               - "null"
+          uniqueItems: true
         aByteArray:
           type: string
           format: byte
@@ -1444,6 +1484,7 @@ components:
               - integer
               - "null"
             format: int32
+          uniqueItems: true
         bShortArray:
           type: array
           items:
@@ -1451,6 +1492,7 @@ components:
               - integer
               - "null"
             format: int32
+          uniqueItems: true
         aIntegerArray:
           type: array
           items:
@@ -1458,6 +1500,7 @@ components:
               - integer
               - "null"
             format: int32
+          uniqueItems: true
         bIntegerArray:
           type: array
           items:
@@ -1465,6 +1508,7 @@ components:
               - integer
               - "null"
             format: int32
+          uniqueItems: true
         cIntegerArray:
           type: array
           items:
@@ -1472,6 +1516,7 @@ components:
               - integer
               - "null"
             format: int32
+          uniqueItems: true
         aLongArray:
           type: array
           items:
@@ -1480,6 +1525,7 @@ components:
               - "null"
             format: int64
           minItems: 1
+          uniqueItems: true
         bLongArray:
           type: array
           items:
@@ -1487,6 +1533,7 @@ components:
               - integer
               - "null"
             format: int64
+          uniqueItems: true
         aBigIntegerArray:
           type: array
           items:
@@ -1494,18 +1541,21 @@ components:
               - integer
               - "null"
             format: int64
+          uniqueItems: true
         aCharacterArray:
           type: array
           items:
             type: 
               - string
               - "null"
+          uniqueItems: true
         bCharacterArray:
           type: array
           items:
             type: 
               - string
               - "null"
+          uniqueItems: true
         aFloatArray:
           type: array
           items:
@@ -1513,6 +1563,7 @@ components:
               - number
               - "null"
             format: float
+          uniqueItems: true
         bFloatArray:
           type: array
           items:
@@ -1520,6 +1571,7 @@ components:
               - number
               - "null"
             format: float
+          uniqueItems: true
         aDoubleArray:
           type: array
           items:
@@ -1529,6 +1581,7 @@ components:
             format: double
           minItems: 4
           maxItems: 12
+          uniqueItems: true
         bDoubleArray:
           type: array
           items:
@@ -1536,6 +1589,7 @@ components:
               - number
               - "null"
             format: double
+          uniqueItems: true
         aBigDecimalArray:
           type: array
           items:
@@ -1543,18 +1597,21 @@ components:
               - number
               - "null"
             format: double
+          uniqueItems: true
         aStringArray:
           type: array
           items:
             type: 
               - string
               - "null"
+          uniqueItems: true
         bStringArray:
           type: array
           items:
             type: 
               - string
               - "null"
+          uniqueItems: true
 
     # com.anaptecs.jeaf.junit.openapi.base.PrimitiveObject
     PrimitiveObject:
@@ -1844,6 +1901,7 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Reseller'
+          uniqueItems: true
         name:
           type: string
           minLength: 12
@@ -1875,11 +1933,13 @@ components:
              - 'CHF'
           minItems: 7
           maxItems: 42
+          uniqueItems: true
           nullable: false
         productCodes:
           type: array
           items:
             $ref: '#/components/schemas/ProductCode'
+          uniqueItems: true
           minItems: 1
         description:
           type: string
@@ -1937,6 +1997,7 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Product'
+          uniqueItems: true
         value:
           type: integer
           format: int32
@@ -1954,6 +2015,8 @@ components:
             x-extensible-enum:
               - 'B2C_SORTIMENT'
               - 'EMPLOYEE_SORTIMENT'
+          uniqueItems: true
+            
           deprecated: true
 
     # com.anaptecs.jeaf.junit.openapi.base.Stop
@@ -2119,6 +2182,8 @@ components:
                 enum:
                   - 'REAL_STOP'
                   - 'VIRTUAL_STOP'
+              uniqueItems: true
+            
             inlineStopType:
               type: string
               enum:
@@ -2184,6 +2249,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/InventoryType'
+              uniqueItems: true
 
     # com.anaptecs.jeaf.junit.openapi.base.WeirdParent
     WeirdParent:
@@ -2218,5 +2284,6 @@ components:
           type: array
           items:
             type: string
+          uniqueItems: true
           nullable: false
 
