--- a/jeaf-generator-test-open-api/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/products/product-services.yml
@@ -1368,6 +1368,7 @@ paths:
             items:
               type: integer
               format: int32
+            uniqueItems: true
       responses:
         '200':
           description: |
@@ -1697,6 +1698,7 @@ paths:
               type: integer
               format: int32
               maximum: 4711
+            uniqueItems: true
             nullable: true
         - name: byte-code
           in: query
