--- a/jeaf-generator-test-spring-boot3/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-spring-boot3/src-gen/main/resources/base/product-base.yml
@@ -332,12 +332,14 @@ components:
                 format: int32
               minItems: 10
               maxItems: 100
+              uniqueItems: true
             requiredArray:
               type: array
               items:
                 type: 
                   - string
               minItems: 1
+              uniqueItems: true
 
     # com.anaptecs.spring.base.ChildB
     ChildB:
@@ -361,12 +363,14 @@ components:
                   - "null"
               minItems: 11
               maxItems: 42
+              uniqueItems: true
             composition:
               description: |
                 the composition
               type: array
               items:
                 $ref: '#/components/schemas/ParentClass'
+              uniqueItems: true
 
     # com.anaptecs.spring.base.ChildBB
     ChildBB:
@@ -392,6 +396,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/ChildB'
+              uniqueItems: true
             deprecatedParent:
               # Property "deprecatedParent" is marked as deprecated. However OpenAPI does not support to mark references to complex types as deprecated.
               $ref: '#/components/schemas/ParentClass'
@@ -415,10 +420,12 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/BooleanCodeType'
+          uniqueItems: true
         shortCodeTypeAssociation:
           type: array
           items:
             $ref: '#/components/schemas/ShortCodeType'
+          uniqueItems: true
           minItems: 1
         stringCode:
           $ref: '#/components/schemas/StringCodeType'
@@ -890,18 +897,21 @@ components:
             type: 
               - boolean
               - "null"
+          uniqueItems: true
         bBooleanArray:
           type: array
           items:
             type: 
               - boolean
               - "null"
+          uniqueItems: true
         cBooleanArray:
           type: array
           items:
             type: 
               - boolean
               - "null"
+          uniqueItems: true
         aByteArray:
           type: string
           format: byte
@@ -915,6 +925,7 @@ components:
               - integer
               - "null"
             format: int32
+          uniqueItems: true
         bShortArray:
           type: array
           items:
@@ -922,6 +933,7 @@ components:
               - integer
               - "null"
             format: int32
+          uniqueItems: true
         aIntegerArray:
           type: array
           items:
@@ -929,6 +941,7 @@ components:
               - integer
               - "null"
             format: int32
+          uniqueItems: true
         bIntegerArray:
           type: array
           items:
@@ -936,6 +949,7 @@ components:
               - integer
               - "null"
             format: int32
+          uniqueItems: true
         cIntegerArray:
           type: array
           items:
@@ -943,6 +957,7 @@ components:
               - integer
               - "null"
             format: int32
+          uniqueItems: true
         aLongArray:
           type: array
           items:
@@ -950,6 +965,7 @@ components:
               - integer
               - "null"
             format: int64
+          uniqueItems: true
         bLongArray:
           type: array
           items:
@@ -957,6 +973,7 @@ components:
               - integer
               - "null"
             format: int64
+          uniqueItems: true
         aBigIntegerArray:
           type: array
           items:
@@ -964,18 +981,21 @@ components:
               - integer
               - "null"
             format: int64
+          uniqueItems: true
         aCharacterArray:
           type: array
           items:
             type: 
               - string
               - "null"
+          uniqueItems: true
         bCharacterArray:
           type: array
           items:
             type: 
               - string
               - "null"
+          uniqueItems: true
         aFloatArray:
           type: array
           items:
@@ -983,6 +1003,7 @@ components:
               - number
               - "null"
             format: float
+          uniqueItems: true
         bFloatArray:
           type: array
           items:
@@ -990,6 +1011,7 @@ components:
               - number
               - "null"
             format: float
+          uniqueItems: true
         aDoubleArray:
           type: array
           items:
@@ -997,6 +1019,7 @@ components:
               - number
               - "null"
             format: double
+          uniqueItems: true
         bDoubleArray:
           type: array
           items:
@@ -1004,6 +1027,7 @@ components:
               - number
               - "null"
             format: double
+          uniqueItems: true
         aBigDecimalArray:
           type: array
           items:
@@ -1011,24 +1035,28 @@ components:
               - number
               - "null"
             format: double
+          uniqueItems: true
         aStringArray:
           type: array
           items:
             type: 
               - string
               - "null"
+          uniqueItems: true
         bStringArray:
           type: array
           items:
             type: 
               - string
               - "null"
+          uniqueItems: true
         cStringArray:
           type: array
           items:
             type: 
               - string
           minItems: 1
+          uniqueItems: true
 
     # com.anaptecs.spring.base.PrimitiveArraysObjectWithRestrictions
     PrimitiveArraysObjectWithRestrictions:
@@ -1043,18 +1071,21 @@ components:
             type: 
               - boolean
               - "null"
+          uniqueItems: true
         bBooleanArray:
           type: array
           items:
             type: 
               - boolean
               - "null"
+          uniqueItems: true
         cBooleanArray:
           type: array
           items:
             type: 
               - boolean
               - "null"
+          uniqueItems: true
         aByteArray:
           type: string
           format: byte
@@ -1069,6 +1100,7 @@ components:
               - integer
               - "null"
             format: int32
+          uniqueItems: true
         bShortArray:
           type: array
           items:
@@ -1076,6 +1108,7 @@ components:
               - integer
               - "null"
             format: int32
+          uniqueItems: true
         aIntegerArray:
           type: array
           items:
@@ -1083,6 +1116,7 @@ components:
               - integer
               - "null"
             format: int32
+          uniqueItems: true
         bIntegerArray:
           type: array
           items:
@@ -1090,6 +1124,7 @@ components:
               - integer
               - "null"
             format: int32
+          uniqueItems: true
         cIntegerArray:
           type: array
           items:
@@ -1097,6 +1132,7 @@ components:
               - integer
               - "null"
             format: int32
+          uniqueItems: true
         aLongArray:
           type: array
           items:
@@ -1105,6 +1141,7 @@ components:
               - "null"
             format: int64
           minItems: 1
+          uniqueItems: true
         bLongArray:
           type: array
           items:
@@ -1112,6 +1149,7 @@ components:
               - integer
               - "null"
             format: int64
+          uniqueItems: true
         aBigIntegerArray:
           type: array
           items:
@@ -1119,18 +1157,21 @@ components:
               - integer
               - "null"
             format: int64
+          uniqueItems: true
         aCharacterArray:
           type: array
           items:
             type: 
               - string
               - "null"
+          uniqueItems: true
         bCharacterArray:
           type: array
           items:
             type: 
               - string
               - "null"
+          uniqueItems: true
         aFloatArray:
           type: array
           items:
@@ -1138,6 +1179,7 @@ components:
               - number
               - "null"
             format: float
+          uniqueItems: true
         bFloatArray:
           type: array
           items:
@@ -1145,6 +1187,7 @@ components:
               - number
               - "null"
             format: float
+          uniqueItems: true
         aDoubleArray:
           type: array
           items:
@@ -1154,6 +1197,7 @@ components:
             format: double
           minItems: 4
           maxItems: 12
+          uniqueItems: true
         bDoubleArray:
           type: array
           items:
@@ -1161,6 +1205,7 @@ components:
               - number
               - "null"
             format: double
+          uniqueItems: true
         aBigDecimalArray:
           type: array
           items:
@@ -1168,18 +1213,21 @@ components:
               - number
               - "null"
             format: double
+          uniqueItems: true
         aStringArray:
           type: array
           items:
             type: 
               - string
               - "null"
+          uniqueItems: true
         bStringArray:
           type: array
           items:
             type: 
               - string
               - "null"
+          uniqueItems: true
 
     # com.anaptecs.spring.base.PrimitiveObject
     PrimitiveObject:
@@ -1467,6 +1515,7 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Reseller'
+          uniqueItems: true
         name:
           type: string
           minLength: 12
@@ -1499,11 +1548,13 @@ components:
              - CHF
           minItems: 7
           maxItems: 42
+          uniqueItems: true
           nullable: false
         productCodes:
           type: array
           items:
             $ref: '#/components/schemas/ProductCode'
+          uniqueItems: true
           minItems: 1
         description:
           type: string
@@ -1540,6 +1591,7 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Channel'
+          uniqueItems: true
           minItems: 1
         name:
           type: string
@@ -1602,6 +1654,7 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Product'
+          uniqueItems: true
 
     # com.anaptecs.spring.base.Stop
     Stop:
